syntax = "proto3";

package ingress;

option go_package = "github.com/vorteil/direktiv/pkg/ingress";

message GetWorkflowVariableRequest {
	optional string workflowUid = 1;
	optional string key = 2;
}

message GetWorkflowVariableResponse {
	optional bytes value = 1;
	optional int64 totalSize = 2;
	optional int64 chunkSize = 3;
}